--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.11.0",
     "react": "^16.8.3",
+    "react-burger-menu": "^2.6.5",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
   },
@@ -11,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sass:compile": "node-sass --include-path sass App.scss App.css"
   },
   "eslintConfig": {
     "extends": "react-app"
