--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "firebase": "^5.8.5",
     "firebase-tools": "^6.4.0",
     "firestore": "^1.1.6",
+    "google-maps-react": "^2.0.2",
     "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.3",
     "react-burger-menu": "^2.6.5",
     "react-dom": "^16.8.3",
